Bug 1571283 - Add null check for mObserver r=baku

Differential Revision: https://phabricator.services.mozilla.com/D42092